@@ -17,6 +17,8 @@
           (lerepp).
         - List tokens of a client.
         - Upgrade Mojolicious dependency to 9.19.
+        - Separate prefix style from non-item style
+          in menus.
 
         WARNING: Upgrading to Mojolicious 9.19 will
           invalidate all sessions. This is a security update.
